<resources>
    <string name="app_name">Pregledovalnik Veselic</string>
    <string name="notification_title">Today\'s events</string>
    <string name="notification_title_favorite">Favorite event reminder</string>
    <string name="notification_text" translatable="false">Just some notification test</string>
    <string name="notification_big_text" translatable="false">Some big text</string>
    <string name="page_main">Main List</string>
    <string name="page_favorites">Favorites</string>
    <string name="page_notify">Notify</string>


    <string name="content_authority" translatable="false">com.ribic.nejc.party</string>


    <!--Error messages-->
    <string name="error_web_page_down">Web page where I get data is currently down! :)</string>
    <string name="error_no_internet_connection">No internet connection, try refreshing!</string>
    <string name="error_no_data_in_db">No data to show in offline mode!</string>
    <string name="error_fail_to_retrieve_data_from_db">I had problem retrieving data from data base in offline mode!</string>



    <string name="long_dummy" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <!-- - - - - - - - - - - -->
    <!--Used by Preferences  -->
    <!-- - - - - - - - - - - -->

    <string name="pref_notification_key" translatable="false">favorite</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notification_enabled">You will get notified on a day of the events</string>
    <string name="pref_notification_disabled">You will not be notified</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">Mountain View, CA 94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label" translatable="false">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric" translatable="false">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial" translatable="false">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="menu_item_settings">Settings</string>
    <string name="no_internet_connection">No internet connection</string>


    <string name="pref_style_key" translatable="false">style</string>
    <string name="pref_style_title">Choose Theme</string>
    <string name="pref_style_label_blue">Blue Sky</string>
    <string name="pref_style_label_green">Green Nature</string>
    <string name="pref_style_label_yellow">Yellow Sun</string>
    <string name="pref_style_label_red">Red Love</string>

    <string name="pref_style_value_blue">blue_sky</string>
    <string name="pref_style_value_green">green_nature</string>
    <string name="pref_style_value_yellow">yellow_sun</string>
    <string name="pref_style_value_red">red_love</string>


    <string name="pref_favorite_names_key" translatable="false">pref_favorite_names_key</string>
    <string name="no_data_availabe_to_show">No data available right now, please refresh or wait to internet</string>
    <string name="no_favorites_events">No favorites events saved yet</string>
    <string name="no_videos_for_this_event">No videos for this event</string>
    <string name="toast_notify_event_when_favorited">You will be notified about event</string>
    <string name="try_again">Try again</string>
    <string name="no_data_on_that_search_query">No data on that search query</string>
    <string name="detail_more">More:</string>
    <string name="detail_region">Region:</string>
    <string name="detail_when">When:</string>
    <string name="detail_where">Where:</string>
    <string name="detail_videos">Videos:</string>
    <string name="no_internet_connection_try_again_later">No internet connection, try again later</string>
    <string name="page_all">All Events</string>
    <string name="error_occurred">Error occurred</string>
    <string name="main_bellow_add_unit_id" translatable="false">ca-app-pub-9063494299873125/9517704094</string>

</resources>
